Ensure today logo doesn't cause toggler btn to collapse at minimum supported screen size (320px)

--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -6,6 +6,12 @@
   }
 }
 
+.navbar-brand {
+  @include media-breakpoint-down(sm) {
+    max-width: 130px;
+  }
+}
+
 .navbar-toggler {
   border-color: $black;
   color: $black;
